edition = "2023";

package wayplatform.connect.tachograph.card.v1;

// ApplicationGeneration specifies the generation of the tachograph card application
// from which the file originates.
//
// See Data Dictionary, Section 2.75, `Generation`.
//
// ASN.1 Specification:
//
//     Generation ::= INTEGER (0..255)
//
// Value assignment:
// '01'H: Generation 1
// '02'H: Generation 2
//
// The original file comment mentioned this corresponds to bit 1 of the tag appendix byte,
// which is likely an implementation detail of how files are tagged on the card.
enum ApplicationGeneration {
  APPLICATION_GENERATION_UNSPECIFIED = 0;

  // Generation 1 application (bit 1 = 0).
  // Corresponds to value '01'H in the ASN.1 specification.
  GENERATION_1 = 1;

  // Generation 2 application (bit 1 = 1).
  // Corresponds to value '02'H in the ASN.1 specification.
  GENERATION_2 = 2;
}