edition = "2023";

package wayplatform.connect.tachograph.card.v1;

import "wayplatform/connect/tachograph/card/v1/application_generation.proto";
import "wayplatform/connect/tachograph/card/v1/content_type.proto";
import "wayplatform/connect/tachograph/card/v1/elementary_file_type.proto";

// A raw card file.
message RawCardFile {
  // The TLV records of the raw card file.
  repeated Record records = 1;

  // A TLV record of the raw card file.
  message Record {
    // The tag of the TLV record.
    int32 tag = 1;

    // The file type, inferred from the tag.
    ElementaryFileType file = 2;

    // The application generation, inferred from the tag.
    ApplicationGeneration generation = 3;

    // The content type of the value, inferred from the tag.
    ContentType content_type = 4;

    // The length of the record value.
    int32 length = 5;

    // The value of the record.
    bytes value = 6;
  }
}
