edition = "2023";

package wayplatform.connect.tachograph.vu.v1;

import "wayplatform/connect/tachograph/vu/v1/versioning.proto";

// Represents the data structure for a DownloadInterfaceVersion transfer.
// See Appendix 7, Section 2.2.6.1.
message DownloadInterfaceVersion {
  // The generation of the vehicle unit, parsed from the first byte of the data element.
  Generation generation = 1;

  // The version of the download interface, parsed from the second byte.
  Version version = 2;
}